Update and rename base_de_datos/pages/login.html to base_de_datos/páginas/login.html

--- a/base_de_datos/páginas/login.html
+++ b/base_de_datos/páginas/login.html
@@ -22,7 +22,7 @@
                 </div>
 
                 <div class="input-box">
-                    <span class="details">Cotraseña</span>
+                    <span class="details">Contraseña</span>
                     <input type="password" placeholder="Ingresa tu contraseña" require>
                 </div>
 
